--- a/.gitignore
+++ b/.gitignore
@@ -11,12 +11,15 @@ tmp/
 *~.nib
 Servers/
 local.properties
+*.properties
+properties/
 .settings/
 .loadpath
 .recommenders
 .classpath
 .project
 .springBeans
+target/m2e-wtp/
 
 # External tool builders
 .externalToolBuilders/
